# local-llm-wiki-rag

./: .gitignore  README.md  agents.md  config.yaml  pyproject.toml
examples/: sample_meeting.md
extracted/chunks/: doc_b6fea8e9.jsonl  doc_d7165f47.jsonl
extracted/documents/: doc_b6fea8e9.json  doc_d7165f47.json
graph/: edges.jsonl  nodes.jsonl
metadata/: chunks.jsonl  claims.jsonl  sources.jsonl
prompts/: update_existing_page.md
scripts/: build_graph.py  build_indexes.py  build_wiki.py  ingest.py  query.py  rebuild_all.py  update_wiki.py  verify.py
src/llm_wiki/: config.py  schemas.py
src/llm_wiki/chunking/: chunker.py
src/llm_wiki/claims/: extractor.py
src/llm_wiki/extraction/: code.py  dispatcher.py  markdown.py  pdf.py  tables.py  text.py
src/llm_wiki/graph/: builder.py  retrieval.py
src/llm_wiki/indexing/: bm25.py  summaries.py  vector.py
src/llm_wiki/ingestion/: registry.py
src/llm_wiki/llm/: base.py  json_utils.py  ollama.py  openai_compatible.py  (+1 more)
src/local_llm_wiki_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_chunking.py  test_claim_mapping.py  test_extraction.py  test_graph.py  test_ingestion.py  test_retrieval.py  test_verification.py  test_wiki_generation.py
wiki/: index.md
wiki/concepts/: graphrag.md  rag.md  raptor.md  source-verification.md
wiki/decisions/: local-model-choice.md  rag-architecture.md
wiki/experiments/: sample_meeting.md
wiki/papers/: chen_multimodal_co-attention_transformer_for_survival_prediction_in_gigapixel_whole_slide_iccv_2021_paper.md
wiki/projects/: local-llm-wiki-rag.md
(+12 files in other folders)
