[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-llm-wiki-rag"
version = "0.1.0"
description = "Local LLM Wiki + RAG system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "pyyaml",
  "typer",
  "rich",
  "numpy",
  "scikit-learn",
  "pypdf",
  "networkx",
  "rank-bm25",
  "httpx",
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
